tests/valid/function/generic_direct_call_infer_arg.facet
fn id<T>(x: affine T) -> affine T {
  x
}

fn main() -> affine isize {
  (id 1)
}
