tests/invalid/replace_error/replace_linear_param_not_consumed.facet
fn f(mut x: linear isize) -> linear isize {
    (replace x 42)
}
